Code: First iteration of native deployment